Enhance Novel entity to manage tags with orphan removal and update logic
- Added `orphanRemoval = true` to the `tags` relationship in the `Novel` class to ensure proper cleanup of unused tags.
- Improved the `updateTags` method to remove tags that are no longer present and add new tags efficiently, enhancing the management of novel tags.

These changes improve the integrity and management of tags associated with novels.